--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <title>fard</title>
 </head>
 <body>
-    <a href="https://cdn.jsdelivr.net/gh/bistek-studios/querySelectorPlusPlus@1.0.0/">look here</a>
+    <a href="https://cdn.jsdelivr.net/gh/bistek-studios/querySelectorPlusPlus@1.0.1rc2/">look here</a>
 </body>
-<script src="https://cdn.jsdelivr.net/gh/bistek-studios/querySelectorPlusPlus@1.0.0/qspp.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/bistek-studios/querySelectorPlusPlus@1.0.1rc2/qspp.min.js"></script>
 </html>
